# pdfconverter-api

./: .envrc  Dockerfile  docker-compose.yml  pyproject.toml
etc/: Dockerfile  converter-docker-entrypoint.sh  converter.Dockerfile  docker-entrypoint.sh  supervisord.conf
src/app/: main.py
src/app/db/: tables.py
src/app/db/migrations/versions/: 2c8496b9f37a_init.py
src/app/repositories/: external.py  pdf.py  storage.py  task.py
src/app/routes/: task.py  web.py
src/app/schemas/: exception.py  task.py
src/app/services/: task.py
src/converter/: .~lock.result.docx#  app.py  convert.py
templates/: index.html
